--- a/package.json
+++ b/package.json
@@ -35,36 +35,36 @@
     "default": "./src/index.js"
   },
   "dependencies": {
-    "d3-array": "3",
-    "d3-axis": "3",
-    "d3-brush": "3",
-    "d3-chord": "3",
-    "d3-color": "3",
-    "d3-contour": "4",
-    "d3-delaunay": "6",
-    "d3-dispatch": "3",
-    "d3-drag": "3",
-    "d3-dsv": "3",
-    "d3-ease": "3",
-    "d3-fetch": "3",
-    "d3-force": "3",
-    "d3-format": "3",
-    "d3-geo": "3",
-    "d3-hierarchy": "3",
-    "d3-interpolate": "3",
-    "d3-path": "3",
-    "d3-polygon": "3",
-    "d3-quadtree": "3",
-    "d3-random": "3",
-    "d3-scale": "4",
-    "d3-scale-chromatic": "3",
-    "d3-selection": "3",
-    "d3-shape": "3",
-    "d3-time": "3",
-    "d3-time-format": "4",
-    "d3-timer": "3",
-    "d3-transition": "3",
-    "d3-zoom": "3"
+    "d3-array": "workspace:*",
+    "d3-axis": "workspace:*",
+    "d3-brush": "workspace:*",
+    "d3-chord": "workspace:*",
+    "d3-color": "workspace:*",
+    "d3-contour": "workspace:*",
+    "d3-delaunay": "workspace:*",
+    "d3-dispatch": "workspace:*",
+    "d3-drag": "workspace:*",
+    "d3-dsv": "workspace:*",
+    "d3-ease": "workspace:*",
+    "d3-fetch": "workspace:*",
+    "d3-force": "workspace:*",
+    "d3-format": "workspace:*",
+    "d3-geo": "workspace:*",
+    "d3-hierarchy": "workspace:*",
+    "d3-interpolate": "workspace:*",
+    "d3-path": "workspace:*",
+    "d3-polygon": "workspace:*",
+    "d3-quadtree": "workspace:*",
+    "d3-random": "workspace:*",
+    "d3-scale": "workspace:*",
+    "d3-scale-chromatic": "workspace:*",
+    "d3-selection": "workspace:*",
+    "d3-shape": "workspace:*",
+    "d3-time": "workspace:*",
+    "d3-time-format": "workspace:*",
+    "d3-timer": "workspace:*",
+    "d3-transition": "workspace:*",
+    "d3-zoom": "workspace:*"
   },
   "devDependencies": {
     "@observablehq/plot": "^0.6.7",
